<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="96dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btNavView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/appCollapsingToolbarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

                <HorizontalScrollView
                    android:id="@+id/horizontalScrollViewIm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/sp"
                    tools:ignore="MissingConstraints,SpeakableTextPresentCheck">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imBan1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/purple_200"
                            android:textColor="@color/black"
                            app:srcCompat="@drawable/banner2"
                            tools:ignore="ContentDescription" />

                        <ImageView
                            android:id="@+id/imBan2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/purple_200"
                            android:textColor="@color/black"
                            app:srcCompat="@drawable/banner2"
                            tools:ignore="ContentDescription" />

                    </LinearLayout>

                </HorizontalScrollView>
            </com.google.android.material.appbar.CollapsingToolbarLayout>

            <HorizontalScrollView
                android:id="@+id/horizontalScrollViewBt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="horizontal"
                    android:paddingStart="16dp"
                    tools:ignore="RtlSymmetry">

                    <Button
                        android:id="@+id/btPizza"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:backgroundTint="@color/red20"
                        android:padding="4dp"
                        android:stateListAnimator="@null"
                        android:text="@string/pizza"
                        android:textSize="16sp"
                        android:theme="@style/Button.Red"
                        tools:ignore="ButtonStyle,TextContrastCheck" />

                    <Button
                        android:id="@+id/btCombo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:backgroundTint="@color/red20"
                        android:stateListAnimator="@null"
                        android:text="@string/combo"
                        android:textSize="16sp"
                        android:theme="@style/Button.Red"
                        tools:ignore="ButtonStyle,TextContrastCheck" />

                    <Button
                        android:id="@+id/btDessert"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:backgroundTint="@color/red20"
                        android:padding="4dp"
                        android:stateListAnimator="@null"
                        android:text="@string/desserts"
                        android:textSize="16sp"
                        android:theme="@style/Button.Red"
                        tools:ignore="ButtonStyle,TextContrastCheck" />

                    <Button
                        android:id="@+id/btBeverages"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:backgroundTint="@color/red20"
                        android:padding="4dp"
                        android:stateListAnimator="@null"
                        android:text="@string/beverages"
                        android:textSize="16sp"
                        android:theme="@style/Button.Red"
                        tools:ignore="ButtonStyle,TextContrastCheck" />

                </LinearLayout>

            </HorizontalScrollView>

        </com.google.android.material.appbar.AppBarLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <LinearLayout
        android:id="@+id/ln"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/coordinatorLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <Spinner
            android:id="@+id/sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:entries="@array/cities"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:stateListAnimator="@null"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints,RtlHardcoded,TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

        <ImageButton
            android:id="@+id/imQr"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="100dp"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/app_name"
            android:minWidth="60dp"
            android:minHeight="60dp"
            android:scaleType="fitEnd"
            android:textColor="@color/black"
            app:srcCompat="@drawable/baseline_qr_code_scanner_24"
            tools:ignore="RtlHardcoded,TouchTargetSizeCheck" />

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/btNavView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_main_menu">

    </com.google.android.material.bottomnavigation.BottomNavigationView>
</androidx.constraintlayout.widget.ConstraintLayout>